bin_PROGRAMS = tinyxpath

tinyxpath_SOURCES = htmlutil.cpp main.cpp tinystr.cpp tinysyntax.cpp tinyutil.cpp tinyxml.cpp tinyxmlerror.cpp tinyxmlparser.cpp tinyxpstream.cpp tokenlist.cpp workitem.cpp xmlutil.cpp xpathappl.cpp

tinyxpath_LDADD = 

# set the include path found by configure
INCLUDES= $(all_includes) 

AM_CXXFLAGS = -Wall

# the library search path.
tinyxpath_LDFLAGS = $(all_libraries)
